--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -238,7 +238,6 @@ section {
             font-size: 30px;
             text-align: center;
             font-weight: 300;
-            text-transform: uppercase;
             span {
                 font-size: 72px;
                 color: #213c13;
@@ -435,6 +434,16 @@ section {
         font-size: 72px;
         font-weight: 300;
         margin-bottom: 30px;
+        span {
+            color: #213c13;
+            font-weight: 900;
+        }
+    }
+    h3 {
+        color: #575757;
+        font-size: 37px;
+        margin: 20px 0;
+        font-weight: 300;
         span {
             color: #213c13;
             font-weight: 900;
@@ -1401,6 +1410,10 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
             font-size: 55px;
             margin-bottom: 20px;
         }
+        h3 {
+            font-size: 33px;
+            margin: 20px 0;
+        }
     }
     #maininvestor {
         .maininvestor-text {
@@ -1494,7 +1507,14 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
         top: 70px
     }
 }
-/* end of 1389.98 */
+@media (max-width: 1399.98px) {
+    #maincta h3 {
+        font-size: 29px;
+        margin: 20px 0;
+    }
+}
+
+/* end of 1399.98 */
 
 @media (max-width: 1299.98px) {
     header {
@@ -1659,6 +1679,10 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     }
     #mainwhy .why-carousel-nav button {
         display: inline-block;
+    }
+    #maincta h3 {
+        font-size: 23px;
+        margin: 20px 0;
     }
 }
 /* end of 1199.98 */
@@ -1867,6 +1891,9 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
     }
     #gallery .gallery-item h2 {
         font-size: 45px
+    }
+    #maincta h3 {
+        font-size: 18px;
     }
 }
 /* end of 991.98 */
@@ -2157,6 +2184,9 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
         .gallery-item img {
             opacity: 1;
         }
+    }
+    #maincta h3 {
+        margin: 10px 0 20px;
     }
 }
 /* end of 575.98 */
