--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1123,6 +1123,8 @@ section {
 }
 #gallery .gallery-catalog {
   background: #213c13;
+  display: flex;
+  justify-content: center;
 }
 #gallery .gallery-catalog div {
   opacity: 0;
@@ -1189,6 +1191,39 @@ section {
 #gallery .slick-current:hover div .bttn {
   opacity: 1;
   margin-top: 30px;
+}
+#photos-list {
+  margin-bottom: 30px;
+  padding: 0;
+}
+#photos-list .col-gallery-thumb {
+  margin-top: 30px;
+}
+#photos-list .col-gallery-thumb img,
+#photos-list .col-gallery-thumb a {
+  display: block;
+  position: relative;
+}
+#photos-list .col-gallery-thumb a {
+  overflow: hidden;
+}
+#photos-list .col-gallery-thumb div {
+  position: absolute;
+  background: rgba(240, 166, 31, 0.5);
+  width: 100%;
+  height: 100%;
+}
+#photos-list .col-gallery-thumb div i {
+  font-size: 52px;
+  color: white;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 52px;
+  width: 52px;
 }
 /* How to buy
 ================================================== */
