Properties with prices

--- a/public/css/less-partials/developro.less
+++ b/public/css/less-partials/developro.less
@@ -125,6 +125,54 @@
     }
 }
 
+
+.ribbon1 {
+    position: absolute;
+    top: -6.1px;
+    left: 10px;
+}
+.ribbon1:after {
+    position: absolute;
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 76px solid transparent;
+    border-right: 76px solid transparent;
+    border-top: 10px solid #b79a5e;
+}
+.ribbon1 span {
+    position: relative;
+    display: block;
+    text-align: center;
+    background: #b79a5e;
+    font-size: 14px;
+    line-height: 1;
+    padding: 12px 8px 10px;
+    border-top-right-radius: 8px;
+    width: 152px;
+    color: white;
+    font-weight: 500;
+}
+.ribbon1 span:before, .ribbon1 span:after {
+    position: absolute;
+    content: "";
+}
+.ribbon1 span:before {
+    height: 6px;
+    width: 6px;
+    left: -6px;
+    top: 0;
+    background: #b79a5e;
+}
+.ribbon1 span:after {
+    height: 6px;
+    width: 8px;
+    left: -8px;
+    top: 0;
+    border-radius: 8px 8px 0 0;
+    background: #957d4c;
+}
+
 #roomsList {
     border-bottom: 1px solid #e5e5e5;
     padding: 0 90px;
@@ -171,10 +219,15 @@
         b {
             float: right;
         }
-        li:first-child {
+        li {
             border-bottom: 1px solid #ddd;
             margin-bottom: 10px;
             padding-bottom: 10px;
+        }
+        li:last-child {
+            border-bottom: 0 solid #ddd;
+            margin-bottom: 0;
+            padding-bottom: 0;
         }
     }
     .badge {
@@ -203,6 +256,11 @@
     #property {
         background: #213c13 url("../../gfx/green-bg.png");
         padding:60px 0;
+        h6 {
+            font-size: 30px;
+            color: white;
+            font-weight: 600;
+        }
     }
     .property-desc {
         ul {
@@ -439,7 +497,16 @@
             a {
                 width: 100%;
             }
+            &.col-top {
+                padding: 40px 15px 10px;
+            }
         }
+    }
+    .ribbon1 {
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 175px;
     }
     #planNav .bttn {
         padding: 10px 0;
