--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1722,6 +1722,10 @@ html.swipebox-html.swipebox-touch{overflow:hidden!important}#swipebox-overlay im
         font-size: 23px;
         margin: 20px 0;
     }
+    .ribbon1 span {
+        font-size: 12px;
+        padding: 8px 8px 6px
+    }
 }
 /* end of 1199.98 */
 
