Location page - AOS animations

--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -1148,6 +1148,7 @@ section {
         bottom: -60px;
         width: 550px;
         padding: 40px;
+        z-index: 10;
         &.location-img-apla-right {
             right: -60px;
         }
