--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1556,6 +1556,7 @@ section {
   bottom: -60px;
   width: 550px;
   padding: 40px;
+  z-index: 10;
 }
 .location-img .location-img-apla.location-img-apla-right {
   right: -60px;
