--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -293,6 +293,15 @@ iframe {
     max-width: 1633px;
   }
 }
+.form-input.col-input-important {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 0;
+  width: 0;
+  z-index: -1;
+}
 :focus,
 button:focus,
 .form-control:focus {
