Mieszkania na stronie głównej

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -210,6 +210,9 @@ body {
   color: #444444;
   font-size: 17px;
 }
+.homepage {
+  overflow-x: hidden;
+}
 a,
 a:hover {
   text-decoration: none;
@@ -713,13 +716,6 @@ section {
 #maininvestment .green-bg {
   background: #213c13 url('../gfx/green-bg.png');
 }
-#maininvestment img {
-  margin-bottom: -380px;
-  margin-top: 100px;
-  border-top: 15px solid white;
-  border-right: 15px solid white;
-  border-bottom: 15px solid white;
-}
 #maininvestment .maininvestment-text {
   padding: 0 140px;
 }
@@ -755,6 +751,92 @@ section {
 #maininvestment .maininvest-cta .bttn {
   padding: 22px 40px;
   color: #222;
+}
+#maininvestment #propertiesCarousel {
+  position: relative;
+  padding: 0 100px;
+}
+#maininvestment #propertiesCarousel .mainroom {
+  background: #fff;
+  box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.07);
+  text-align: center;
+  padding: 55px 30px 30px;
+  position: relative;
+}
+#maininvestment #propertiesCarousel .slick-list {
+  padding: 10px 0 30px;
+}
+#maininvestment #propertiesCarousel #roomsList {
+  display: none;
+}
+#maininvestment #propertiesCarousel #roomsList.slick-initialized {
+  display: block;
+}
+#maininvestment #propertiesCarousel #roomsList a h2 {
+  color: var(--main-color-green);
+  margin-bottom: 20px;
+}
+#maininvestment #propertiesCarousel #roomsList img {
+  width: 100%;
+}
+#maininvestment #propertiesCarousel #roomsList .row {
+  background: #fff;
+  border-top: 0;
+  -webkit-box-shadow: 0 0 0 0 transparent;
+  -moz-box-shadow: 0 0 0 0 transparent;
+  box-shadow: 0 0 0 0 transparent;
+  position: static;
+}
+#maininvestment #propertiesCarousel #roomsList .row:hover {
+  top: 0;
+}
+#maininvestment #propertiesCarousel #roomsList .badge {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#maininvestment #propertiesCarousel #roomsList .ribbon1 {
+  position: absolute;
+  top: -6px;
+  left: 5px;
+}
+#maininvestment #propertiesCarousel #roomsList .ribbon1:after {
+  left: 10px;
+}
+#maininvestment #propertiesCarousel #roomsList .mainroom-price {
+  font-size: 28px;
+  margin-bottom: 16px;
+}
+#maininvestment #propertiesCarousel .slick-arrow {
+  height: 70px;
+  width: 70px;
+  display: block;
+  border-radius: 50%;
+  z-index: 100;
+  -webkit-transition: all 200ms linear;
+  -moz-transition: all 200ms linear;
+  -o-transition: all 200ms linear;
+  transition: all 200ms linear;
+  border: 1px solid #b79a5e;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: -80px;
+  margin: auto;
+}
+#maininvestment #propertiesCarousel .slick-arrow i {
+  color: #b79a5e;
+  font-size: 30px;
+}
+#maininvestment #propertiesCarousel .slick-arrow.slick-next {
+  right: -80px;
+  left: auto;
+}
+#maininvestment #propertiesCarousel .slick-arrow:hover {
+  background: #b79a5e;
+  color: #fff;
+}
+#maininvestment #propertiesCarousel .slick-arrow:hover i {
+  color: white;
 }
 #mainwhy h2.why-title {
   font-size: 60px;
@@ -3278,13 +3360,6 @@ footer img.footer-logo {
   #maininvestor .maininvestor-text {
     padding-left: 0;
   }
-  #maininvestment img {
-    margin-bottom: -360px;
-    margin-top: 50px;
-    border-top: 10px solid #fff;
-    border-right: 10px solid #fff;
-    border-bottom: 10px solid #fff;
-  }
   #maininvestment .maininvestment-text h2 {
     font-size: 26px;
     margin-bottom: 20px;
@@ -3535,6 +3610,13 @@ footer img.footer-logo {
   #maininvestment .maininvest-cta {
     padding: 30px 0;
   }
+  #maininvestment #propertiesCarousel .mainroom {
+    padding: 45px 20px 20px;
+  }
+  #maininvestment #propertiesCarousel #roomsList .mainroom-price {
+    font-size: 23px;
+    margin-bottom: 16px;
+  }
   #maininvestment .maininvestment-text .bttn,
   #maininvestment .maininvest-cta .bttn {
     padding: 16px 30px;
@@ -3674,6 +3756,25 @@ footer img.footer-logo {
   }
   #maininvestment .maininvest-cta {
     padding: 30px 0;
+  }
+  #maininvestment #roomsList .row {
+    flex: 0 0 auto;
+    width: 100%;
+    margin: 0;
+  }
+  #maininvestment #propertiesCarousel {
+    padding: 0 40px;
+  }
+  #maininvestment #propertiesCarousel .slick-arrow {
+    height: 40px;
+    width: 40px;
+    left: -30px;
+  }
+  #maininvestment #propertiesCarousel .slick-arrow i {
+    font-size: 16px;
+  }
+  #maininvestment #propertiesCarousel .slick-arrow.slick-next {
+    right: -30px;
   }
   #mainwhy .why-carousel-right .why-carousel-item {
     padding-bottom: 110px;
@@ -3841,6 +3942,25 @@ footer img.footer-logo {
   }
   #maincta h3 {
     margin: 10px 0 20px;
+  }
+  #maininvestment #propertiesCarousel {
+    padding: 0 35px;
+  }
+  #maininvestment #propertiesCarousel .mainroom {
+    padding: 36px 20px 20px;
+  }
+  #maininvestment #propertiesCarousel #roomsList .mainroom-price {
+    font-size: 19px;
+    margin-bottom: 6px;
+  }
+  #maininvestment #propertiesCarousel #roomsList a h2 {
+    margin-bottom: 10px;
+  }
+  #maininvestment #propertiesCarousel .slick-arrow {
+    left: -40px;
+  }
+  #maininvestment #propertiesCarousel .slick-arrow.slick-next {
+    right: -40px;
   }
 }
 /* end of 575.98 */
