--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -200,6 +200,13 @@ button:focus,
     margin-left: 30px;
 }
 
+/* Youtube
+================================================== */
+.video-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; margin: 35px 0}
+.video-container iframe,
+.video-container object,
+.video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
 /* Popup
 ================================================== */
 @import url(less-partials/popup);
