--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -202,7 +202,7 @@ button:focus,
 
 /* Youtube
 ================================================== */
-.video-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; margin: 35px 0}
+.video-container {box-shadow: 0 5px 10px 0 rgba(0,0,0,.38);border: 6px solid #b79a5e;position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; margin: 35px 0}
 .video-container iframe,
 .video-container object,
 .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
